holoirc: remove StreamSupport fully